# asset-agents

./: .gitignore  README.md  functional_test.py  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: assignment-validator.md  code-summarizer.md  investment-dev.md
.claude/commands/: security-check.md  summarize-code.md  validate-assignment.md
agents/: advisor_agent.py  analyst_agent.py  client_agent.py
api/: main.py
tests/: test_agents.py  test_api.py
tools/: knowledge_store.py  web_search.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  index.css
ui/src/components/: ChatArea.tsx  EmptyState.tsx  MarkdownText.tsx  NewSessionModal.tsx  SessionSidebar.tsx
ui/src/components/messages/: AdvisorMessage.tsx  ClientMessage.tsx  ResearchPanel.tsx  SessionEndBanner.tsx  ThinkingIndicator.tsx
ui/src/hooks/: useAdvisorySession.ts
ui/src/types/: index.ts
