[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asset-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "litellm>=1.40.0",
    "anthropic>=0.40.0",
    "chromadb>=0.5.0",
    "tavily-python>=0.3.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "tools", "api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
